--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,380 @@
-.App {
-  text-align: center;
+/************ Custom Font ************/
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Bold.ttf');
+	font-weight: 700;
+}
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Medium.ttf');
+	font-weight: 500;
+}
+@font-face {
+	font-family: Centra;
+	src: url('./assets/font/CentraNo2-Book.ttf');
+	font-weight: 400;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/************ Default Css ************/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  background-color: #121212 !important;
+  color: #fff !important;
+  font-family: 'Centra', sans-serif !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+
+p, a, li, button, ul {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+
+
+button {
+  border: 0;
+  background-color: transparent;
+}
+
+input:focus, textarea:focus, select:focus {
+  outline: none;
+}
+
+@media (min-width:1700px) {
+	main .container {
+		max-width: 100%;
+		padding: 0 150px;
+	}
+}
+
+
+/************ Navbar Css ************/
+nav.navbar {
+  padding: 5px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999;
+  transition:  0.32s ease-in-out;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  background-color: #186F65;
+}
+nav.navbar.scrolled {
+  padding: 0px 0;
+}
+nav.navbar a.navbar-brand {
+    width: 9%;
+}
+nav.navbar .navbar-nav .nav-link.navbar-link {
+  font-weight: 500;
+  color: #fff !important;
+  letter-spacing: 0.8px;
+  padding: 0 25px;
+  font-size: 18px;
+  opacity: 0.75;
+}
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
+nav.navbar .navbar-nav a.nav-link.navbar-link.active {
+    opacity: 1;
+}
+
+
+
+/************ Banner Css ************/
+.banner {
+  margin-top: 0;
+  padding: 200px 0 100px 0;
+  background-color: #ffffff;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+}
+.banner .tagline {
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  padding: 8px 10px;
+  background: linear-gradient(90.21deg, #186F65 -5.91%, #FCE09B  111.58%);
+  border-radius: 10px;
+  font-size: 20px;
+  margin-bottom: 26px;
+  display: inline-block;
+}
+.banner h1 {
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  color: #000000;
+  line-height: 1;
+  margin-bottom: 30px;
+  display: block;
+}
+.banner p {
+  color: #000000;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 96%;
+}
+.banner button {
+  color: #000000;
+  font-weight: 700;
+  font-size: 20px;
+  margin: 40px 0px 40px 0px;
+  letter-spacing: 0.8px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.banner button svg {
+  font-size: 25px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+}
+.banner button:hover svg {
+  margin-left: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+/************ Skills Css ************/
+.skill {
+  padding: 0 0 50px 0;
+  position: relative;
+  background-color: #fff;
+  color: #000000;
+}
+.skill-bx {
+  background: #F1EAFF;
+  border-radius: 64px;
+  text-align: center;
+  padding: 60px 50px;
+  margin-top: -60px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+}
+.skill h2 {
+	font-size: 45px;
+	font-weight: 700;
+}
+.skill p {
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    line-height: 1.5em;
+    margin: 14px 70px 75px 70px;
+}
+.skill-slider {
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+
+}
+.skill-slider .item img {
+  width: 50%;
+  margin: 0 auto 15px auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/************ Projects Css ************/
+.project {
+  padding: 80px 0;
+  position: relative;
+  background: #F1EAFF;
+  color: #ffffff;
+}
+.project h2 {
+	font-size: 45px;
+	font-weight: 700;
+  text-align: center;
+  color: #000;
+}
+.project p {
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+  color: #000;
+}
+
+.project .nav.nav-pills {
+  width: 72%;
+  margin: 0 auto;
+  border-radius: 50px;
+  overflow: hidden;
+}
+.project .nav.nav-pills .nav-item {
+  width: 50%;
+}
+.project .nav.nav-pills .nav-link {
+  background-color: transparent;
+  border-radius: 0;
+  padding: 17px 0;
+  color: #3a3a3a;
+  width: 100%;
+  font-size: 17px;
+  letter-spacing: 0.8px;
+  font-weight: 500;
+  position: relative;
+  transition: 0.3s ease-in-out;
+  text-align: center;
+  z-index: 0;
+}
+.project .nav.nav-pills .nav-link::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 100%;
+    background: linear-gradient(90.21deg, #186F65 -5.91%, #FCE09B  111.58%);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+}
+.project .nav.nav-pills .nav-link.active::before {
+    width: 100% !important;
+    
+}
+
+.proj-imgbx {
+  position: relative;
+  border-radius: 30px;
+  margin-bottom: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 300%;
+  height: 30vh;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+
+.proj-imgbx::before {
+  content: "";
+  background: linear-gradient(90.21deg, #186F65 -5.91%, #FCE09B  111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+.proj-imgbx:hover::before {
+  height: 100%;
+}
+.proj-txtx {
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+.proj-imgbx:hover .proj-txtx {
+  top: 50%;
+  opacity: 1;
+}
+.proj-txtx h4 {
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+  color: #333;
+}
+.proj-txtx span {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.8px;
+  color: #333;
+}
+@media (min-width: 1000px) {
+	.proj-imgbx {
+   width: 300%;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (max-width: 768px) {
+	.proj-imgbx {
+   width: 150%;
+   margin: 0px 50px;
+  }
+}
+@media (max-width: 577px) {
+	.proj-imgbx {
+   width: 80%;
+   margin: 0px 50px;
+  }
+}
+
+
+/************ Footer Css ************/
+.footer {
+  padding: 80px 0 50px 0;
+  background-color: #186F65;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.icon{
+  display: flex;
+  flex-direction: grid;
+  justify-content: flex-end;
+  gap: 30px;
+}
+.icon a{
+  text-decoration: none;
+  color: #ffffff;
+  display: flex;
+  margin-bottom: 10px;
+
+}
+.footer img {
+  max-width: 50%;
+}
+.footer p {
+  font-weight: 400;
+  font-size: 13px;
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  margin-top: 60px;
+}
+
+@media (max-width: 768px) {
+	.icon{
+   margin-top: 20px;
+   flex-direction: column;
+   align-items: center;
+  }
+  .footer img {
+    max-width: 90%;
+  }
+}
+@media (max-width: 577px) {
+  .footer img {
+    max-width: 30%;
   }
 }
